@@ -50,6 +50,10 @@
     <span class="span">Span 2</span>
     <span class="span">Span 3</span>
     
+    <label class="label">Label 1</label>
+    <label class="label">Label 2</label>
+    <label class="label">Label 3</label>
+
     <table class="table" border='1'>
       <tr>
         <td class="td">Data 1</td>
