@@ -26,6 +26,9 @@
     <span>
       My alert
     </span>
+    <label>
+      page-object is the best!
+    </label>
     <table>
       <tr><td>Data1</td><td>Data2</td></tr>
     </table>
@@ -46,7 +49,7 @@
     <ul>
         <li>Item One</li>
         <li>Item Two</li>
-    </ul
+    </ul>
     
   </div>
   
