@@ -13,7 +13,7 @@
 
     <textarea rows="2" cols="20" id="text_area_id" class="text_area_class" name="text_area_name"></textarea>
 
-    <select name="sel_list_name" id="sel_list_id", class="sel_list_class">
+    <select name="sel_list_name" id="sel_list_id" class="sel_list_class">
     <option value="option1">Test 1</option>
     <option value="option2">Test 2</option>
     </select>
@@ -33,6 +33,10 @@
     <span id="span_id" name="span_name" class="span_class">
       My alert
     </span>
+    
+    <label id="label_id" name="label_name" class="label_class">
+      page-object is the best!
+    </label>
 
     <table id='table_id' name='table_name' class='table_class' border='1'>
         <tr>
